--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+
 
 </head>
 <body>
+
   <app-root></app-root>
+
 </body>
 </html>
